# accruo

./: README.md  manage.py  pyproject.toml
accruo/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  common_config.py  filters.py  forms.py  signals.py  tables.py  urls.py  utils.py
core/fixtures/: countries.json  currencies.json
core/migrations/: 0001_initial.py  0002_alter_company_created_at_alter_company_updated_at_and_more.py  0003_alter_company_slug.py  0004_alter_company_unique_hash_alter_expense_unique_hash_and_more.py  0005_rename_expense_category_revenue_revenue_category.py
core/models/: __init__.py  base_models.py  common_models.py
core/views/: __init__.py  base.py  common.py  expenses_views.py  revenues_views.py
static/assets/css/: dark.css  light.css
static/assets/js/: datatables.js  settings.js
static_root/assets/css/: light.css
static_root/assets/js/: settings.js
templates/: base.html  index.html  orders.html
templates/generic/: create.html  detail.html  list.html
templates/includes/: footer.html  sidebar.html  topbar.html
