[tool.poetry]
name = "accuro"
version = "0.1.0"
description = ""
authors = ["xtanjirox <xtanjirokamado93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
pandas = "^2.2.3"
django-tables2 = "^2.7.0"
django-filter = "^24.3"
django-select2 = "^8.2.1"
django-forms-dynamic = "^1.0.0"
django-crispy-forms = "^2.3"
django-ninja = "^1.3.0"
django-ninja-extra = "^0.21.4"
crispy-bootstrap5 = "^2024.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
